# qt-trading-bot-analyzer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.8e2f02e  HttpClient.cpp  HttpClient.h  README.md  login.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglgraph.cpp  openglgraph.h  price.cpp  price.h  priceres.cpp  priceres.h  utils.cpp
Flask/: main.py
accsys/: HttpClient.cpp  HttpClient.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui
cache/: BKR.csv  MPWR.csv  UEC.csv  main.csv
flask/: main.py  users.csv
graph/: openglgraph.cpp  openglgraph.h  utils.cpp  utils.h
search/: choice_dialog.h  search_dialog.cpp  search_dialog.h  ticker.json
